--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js">
+<head>
 	<meta charset="utf-8">
 	<title>My Beautiful Sample Page</title>
 	<script src="js/modernizr.js"></script>
