--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
 <head>
 	<meta charset="utf-8">
-	<title>My Beautiful Sample Page</title>
+	<title>My Beautiful Sample Page --- </title>
 	<script src="js/modernizr.js"></script>
 </head>
     <body>
